# ml-intern

./: Dockerfile  README.md  REVIEW.md  create-pr.sh  pyproject.toml
.github/workflows/: claude-review.yml
agent/: config.py  main.py
agent/context_manager/: manager.py
agent/core/: agent_loop.py  redact.py  session.py  session_uploader.py  telemetry.py  tools.py
agent/prompts/: system_prompt_v2.yaml  system_prompt_v3.yaml
agent/sft/: tagger.py
agent/tools/: dataset_tools.py  docs_tools.py  github_find_examples.py  github_read_file.py  jobs_tool.py  papers_tool.py  plan_tool.py  research_tool.py  sandbox_tool.py
agent/utils/: reliability_checks.py  terminal_display.py
backend/: main.py  session_manager.py  start.sh  websocket.py
backend/routes/: agent.py
eval/: hf_agent_connector.py
frontend/src/components/: SessionChat.tsx
frontend/src/components/Chat/: ActivityStatusBar.tsx  AssistantMessage.tsx  MessageBubble.tsx  MessageList.tsx  ToolCallGroup.tsx
frontend/src/hooks/: useAgentChat.ts  useAgentWebSocket.ts
frontend/src/lib/: chat-message-store.ts  convert-llm-messages.ts  research-store.ts  sse-chat-transport.ts  ws-chat-transport.ts
frontend/src/store/: agentStore.ts
frontend/src/types/: events.ts
posttrain-bench/slurm/: submit.sbatch
scripts/: build_kpis.py  build_sft.py
tests/unit/: test_agent_loop.py  test_build_kpis.py  test_build_sft.py  test_heartbeat.py  test_redact.py  test_sft_tagger.py
